force-app/main/default/objects/ReturnRequest__c/ReturnRequest__c.object-meta.xml
<CustomObject>
    <label>Return Request</label>
    <pluralLabel>Return Requests</pluralLabel>
    <nameField>
        <label>Return Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>RR-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>