force-app/main/default/objects/ReturnRequest__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Related Case</relationshipLabel>
    <relationshipName>Related_Case</relationshipName>
</CustomField>