force-app/main/default/objects/ReturnRequest__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Contact</relationshipLabel>
    <relationshipName>Related_Contact</relationshipName>
</CustomField>