force-app/main/default/objects/ReturnRequest__c/fields/MessagingSession__c.field-meta.xml
<CustomField>
    <fullName>MessagingSession__c</fullName>
    <label>Messaging Session</label>
    <type>Lookup</type>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Related Session</relationshipLabel>
    <relationshipName>Related_Session</relationshipName>
</CustomField>