force-app/main/default/objects/ReturnRequest__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>Order ID</label>
    <type>Text</type>
    <length>30</length>
</CustomField>