force-app/main/default/objects/ReturnRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Iniciado</fullName>
                <default>true</default>
                <label>Iniciado</label>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>