force-app/main/default/objects/ReturnRequest__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>User ID</label>
    <type>Text</type>
    <length>30</length>
</CustomField>